fix for tiny focus visible state

--- a/packages/frontend/src/styles/index.css
+++ b/packages/frontend/src/styles/index.css
@@ -201,6 +201,11 @@ img {
         text-transform: uppercase;
         width: 100%;
 
+        &:focus-visible {
+          border: none;
+          outline: none;
+        }
+
         .action-info-icon {
           border: 3px solid white;
           border-radius: 50%;
